results/SVCOMP/2-shot/log-basic1-2024_03_18_23_33_46.txt
class basic1 {
    //@ requires \typeof(System.out) != null;
    //@ requires \typeof(System.err) != null;
    //@ requires \typeof(System.in) != null;
    public static void main(String[] args) {
        assert (System.out != null);
        System.out.println("Hello World!");
        assert (System.err != null);
        System.err.println("Hello World!");
        assert (System.in != null);
        try {
            int avail = System.in.available();
        } catch (java.io.IOException e) {
        }
    }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:2: error: No operator for \TYPE != <nulltype>
    //@ requires \typeof(System.out) != null;
                                     ^
/home/max/Documents/JMLGPT/tmp/basic1.java:3: error: No operator for \TYPE != <nulltype>
    //@ requires \typeof(System.err) != null;
                                     ^
/home/max/Documents/JMLGPT/tmp/basic1.java:4: error: No operator for \TYPE != <nulltype>
    //@ requires \typeof(System.in) != null;
                                    ^
3 errors

